A few display spacing/overlap display fixes for IE 6 (http://gallery.menalto.com/node/64319). Removed gaps in imageframes around thumbnails.
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@17067 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/ajaxian/theme.css
+++ b/themes/ajaxian/theme.css
@@ -323,7 +323,7 @@ h2 {
 #slideshow-controls {
     position: relative;
     height: 40px;
-    margin: 0px 0 -40px;
+    margin: 0px 0 -58px;
     overflow: hidden;
     z-index: 100;
     text-align: left;
@@ -341,7 +341,7 @@ h2 {
     background-color: #000;
     opacity: 0.6;
     -moz-opacity: 0.6;
-    filter: alpha(opacity=40);	/* Lower opacity for IE since the controls don't hide */
+    filter: alpha(opacity=40);  /* Lower opacity for IE since the controls don't hide */
 }
 
 #slideshow-controls ul li {
@@ -391,6 +391,7 @@ h2 {
 #gsThumbMatrix a .giThumbnail {
     height: 40px;
     width: 40px;
+    margin: 0;
     background-color: #666;
     border: 1px solid #333;
 }
@@ -416,12 +417,14 @@ h2 {
 /* Subalbums */
 
 #subalbums-container h3 {
-    width: 75%;
+    width: 100%;
+    margin: 1em 0 !important;
     border-bottom: 1px solid #fff;
 }
 
 #gsSubAlbumMatrix {
-    width: 450px;
+    width: auto;
+    overflow: hidden;
     margin: 0 auto 1em;
 }
 
